[package]
name = "chsip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
log = "0.4"
libc = "0.2"

[dependencies.simple_logger]
default-features = false
features = ["timestamps"]

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0"
